--- a/web/src/app/features/automations/automations.page.html
+++ b/web/src/app/features/automations/automations.page.html
@@ -9,5 +9,12 @@
     <tr-pagination [totalPages]="totalPages()" />
   </div>
 
-  <div class="flex-grow bg-secondary rounded-md overflow-auto"></div>
+  <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
+    <div class="flex flex-col gap-3">
+      @if (automations | async; as page) { @for (automation of page.data; track
+      automation.id) {
+      <tr-automation-card [automation]="automation" />
+      } }
+    </div>
+  </div>
 </div>
