--- a/web/src/app/features/automations/components/automation-card/automation-card.component.html
+++ b/web/src/app/features/automations/components/automation-card/automation-card.component.html
@@ -1,11 +1,11 @@
-<div class="bg-white p-3 shadow-sm rounded-md">
+<div class="bg-white p-4 shadow-sm rounded-md hover:cursor-pointer hover:bg-accent">
   <div class="flex justify-between flex-row items-center">
     <div class="flex items-center gap-3">
       <div class="relative">
         <div
           class="p-2 rounded-md flex items-center justify-center"
-          style="background-color: #ee3a3d">
-          <ng-icon name="heroSparklesSolid" size="1.8rem" color="white" />
+          [ngStyle]="{ 'background-color': automation().color }">
+          <ng-icon [name]="this.iconName()" size="1.8rem" color="white" />
         </div>
         <div
           class="absolute -bottom-1 left-9 p-1.5 rounded-full"
