feat(web): add main layout for the automation details page

--- a/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
+++ b/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
@@ -7,7 +7,7 @@
         <div
           class="p-2 rounded-md flex items-center justify-center"
           [ngStyle]="{ 'background-color': automation().color }">
-          <ng-icon [name]="this.iconName()" size="1.8rem" color="white" />
+          <ng-icon [name]="this.icon()" size="1.8rem" color="white" />
         </div>
         <div
           class="absolute -bottom-1 left-9 p-1.5 rounded-full"
