--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -1,1 +1,16 @@
-<p>automations-workspace works!</p>
+<div class="flex flex-row items-center gap-6 h-full w-full">
+  <div class="min-h-full flex flex-col space-y-3 w-[83%]">
+    <div class="flex flex-row items-center gap-3">
+      <div
+        class="p-2.5 rounded-md flex items-center justify-center"
+        [ngStyle]="{ 'background-color': automation.color }">
+        <ng-icon [name]="this.icon" size="2rem" color="white" />
+      </div>
+      <h1 class="tr-title-2">{{ automation.label }}</h1>
+    </div>
+    <div class="flex-grow bg-secondary rounded-md overflow-auto p-4"></div>
+  </div>
+  <div class="w-[17%] h-full pt-2.5">
+    <tr-context-menu />
+  </div>
+</div>
