--- a/web/src/app/features/automations/workspace/components/context-menu/context-menu.component.html
+++ b/web/src/app/features/automations/workspace/components/context-menu/context-menu.component.html
@@ -2,12 +2,5 @@
   <tr-context-menu-tabs
     [selectedTab]="selectedTab()"
     (tabChange)="selectedTab.set($event)" />
-  <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
-    @if (selectedTab() === 1) {
-      <h2>Actions</h2>
-    }
-    @if (selectedTab() === 2) {
-      <h2>Info</h2>
-    }
-  </div>
+  <div class="flex-grow bg-secondary rounded-md overflow-auto p-4"></div>
 </div>
