--- a/web/src/app/features/automations/workspace/components/context-menu/context-menu.component.html
+++ b/web/src/app/features/automations/workspace/components/context-menu/context-menu.component.html
@@ -2,5 +2,37 @@
   <tr-context-menu-tabs
     [selectedTab]="selectedTab()"
     (tabChange)="selectedTab.set($event)" />
-  <div class="flex-grow bg-secondary rounded-md overflow-auto p-4"></div>
+  <div class="flex-grow bg-secondary rounded-md overflow-auto p-3 space-y-2">
+    @if (isActionTabSelected()) {
+      <div class="flex flex-row items-center space-x-2">
+        <img
+          ngSrc="icons/discord_logo.svg"
+          alt="Integration Logo"
+          [width]="35"
+          [height]="35" />
+        <span class="tr-large">Discord Actions</span>
+      </div>
+      <div class="flex flex-col gap-3">
+        @for (action of possibleActions; track action) {
+          <div class="bg-white rounded-md p-2 items-center flex justify-between">
+            <div class="flex items-center space-x-1">
+              <div
+                class="p-1 rounded-md flex items-center justify-center"
+                style="background-color: #5865f2">
+                <ng-icon name="heroChatBubbleOvalLeftEllipsis" color="white" />
+              </div>
+              <span class="tr-small">{{ action }}</span>
+            </div>
+            <div
+              class="p-0.5 rounded-md flex items-center justify-center"
+              style="background-color: #5865f2">
+              <ng-icon name="heroPlus" color="white" size="0.8rem" strokeWidth="0.15rem"/>
+            </div>
+          </div>
+        }
+      </div>
+    } @else {
+      <span>Info</span>
+    }
+  </div>
 </div>
