--- a/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
+++ b/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
@@ -1,5 +1,4 @@
-<div
-  class="bg-white p-4 shadow-sm rounded-md hover:cursor-pointer hover:bg-accent">
+<div class="bg-white p-4 rounded-md hover:cursor-pointer hover:bg-accent">
   <div class="flex justify-between flex-row items-center">
     <div class="flex items-center gap-3">
       <div class="relative">
@@ -19,7 +18,7 @@
       <h1 class="tr-large">{{ automation().label }}</h1>
     </div>
     <span class="text-muted tr-medium"
-      >Last update: {{ automation().lastUpdated | formatDate }}</span
+      >Last update: {{ automation().updatedAt | formatDate }}</span
     >
   </div>
 </div>
