--- a/web/src/app/features/integrations/integrations.page.html
+++ b/web/src/app/features/integrations/integrations.page.html
@@ -14,7 +14,7 @@
   <div class="flex-grow bg-secondary rounded-md overflow-auto">
     <div class="p-4 space-y-4 flex-col flex">
       @if (loading()) { @for (_ of [].constructor(5); track $index) {
-      <div class="bg-white rounded-md p-4 shadow-sm flex gap-2">
+      <div class="bg-white rounded-md p-4 flex gap-2">
         <tr-skeleton class="w-12 h-12 rounded-full bg-secondary" />
         <div class="space-y-2">
           <tr-skeleton class="h-4 w-[250px] bg-secondary" />
