--- a/web/src/app/features/automations/listing/automations-list.page.html
+++ b/web/src/app/features/automations/listing/automations-list.page.html
@@ -6,13 +6,23 @@
 
   <div class="flex justify-between gap-3">
     <tr-input-search placeholder="Search automation" class="w-full" />
-    <tr-pagination [totalPages]="totalPages()" />
+    <tr-pagination
+      [totalPages]="totalPages()"
+      (pageChange)="pageChanged($event)" />
   </div>
 
   <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
     <div class="flex flex-col gap-3">
-      @if (automations | async; as page) { @for (automation of page.data; track
-      automation.id) {
+      @if (loading()) { @for (_ of [].constructor(5); track $index) {
+      <div class="bg-white rounded-md p-4 flex justify-between items-center">
+        <div class="flex items-center gap-2">
+          <tr-skeleton class="w-12 h-12 rounded-md bg-secondary" />
+          <tr-skeleton class="h-4 w-[200px] bg-secondary" />
+        </div>
+        <tr-skeleton class="h-4 w-[150px] bg-secondary" />
+      </div>
+      } } @if (automations | async; as page) { @for (automation of page.data;
+      track automation.id) {
       <tr-automation-card [automation]="automation" />
       } }
     </div>
