--- a/web/src/app/features/automations/listing/automations-list.page.html
+++ b/web/src/app/features/automations/listing/automations-list.page.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col min-h-full space-y-3">
   <div class="flex flex-row justify-between items-center w-full">
     <h1 class="tr-title-1">Automations</h1>
-    <button trBtn>Create Automation</button>
+    <button trBtn (click)="createAutomation()">Create Automation</button>
   </div>
 
   <div class="flex justify-between gap-3">
