--- a/web/src/app/features/automations/listing/automations-list.page.html
+++ b/web/src/app/features/automations/listing/automations-list.page.html
@@ -13,18 +13,25 @@
 
   <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
     <div class="flex flex-col gap-3">
-      @if (loading()) { @for (_ of [].constructor(5); track $index) {
-      <div class="bg-white rounded-md p-4 flex justify-between items-center">
-        <div class="flex items-center gap-2">
-          <tr-skeleton class="w-12 h-12 rounded-md bg-secondary" />
-          <tr-skeleton class="h-4 w-[200px] bg-secondary" />
-        </div>
-        <tr-skeleton class="h-4 w-[150px] bg-secondary" />
-      </div>
-      } } @if (automations | async; as page) { @if (!loading()) { @for
-      (automation of page.data; track automation.id) {
-      <tr-automation-card [automation]="automation" />
-      } } }
+      @if (loading()) {
+        @for (_ of [].constructor(5); track $index) {
+          <div
+            class="bg-white rounded-md p-4 flex justify-between items-center">
+            <div class="flex items-center gap-2">
+              <tr-skeleton class="w-12 h-12 rounded-md bg-secondary" />
+              <tr-skeleton class="h-4 w-[200px] bg-secondary" />
+            </div>
+            <tr-skeleton class="h-4 w-[150px] bg-secondary" />
+          </div>
+        }
+      }
+      @if (automations | async; as page) {
+        @if (!loading()) {
+          @for (automation of page.data; track automation.id) {
+            <tr-automation-card [automation]="automation" />
+          }
+        }
+      }
     </div>
   </div>
 </div>
