--- a/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
+++ b/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
@@ -1,4 +1,6 @@
-<div class="bg-white p-4 rounded-md hover:cursor-pointer hover:bg-accent" [routerLink]="['/automations', automation().id]">
+<div
+  class="bg-white p-4 rounded-md hover:cursor-pointer hover:bg-accent"
+  [routerLink]="['/automations', automation().id]">
   <div class="flex justify-between flex-row items-center">
     <div class="flex items-center gap-3">
       <div class="relative">
