--- a/web/src/app/features/automations/workspace/components/context-menu/context-menu.component.html
+++ b/web/src/app/features/automations/workspace/components/context-menu/context-menu.component.html
@@ -14,7 +14,8 @@
       </div>
       <div class="flex flex-col gap-3">
         @for (action of possibleActions; track action) {
-          <div class="bg-white rounded-md p-2 items-center flex justify-between">
+          <div
+            class="bg-white rounded-md p-2 items-center flex justify-between">
             <div class="flex items-center space-x-1">
               <div
                 class="p-1 rounded-md flex items-center justify-center"
@@ -26,7 +27,11 @@
             <div
               class="p-0.5 rounded-md flex items-center justify-center"
               style="background-color: #5865f2">
-              <ng-icon name="heroPlus" color="white" size="0.8rem" strokeWidth="0.15rem"/>
+              <ng-icon
+                name="heroPlus"
+                color="white"
+                size="0.8rem"
+                strokeWidth="0.15rem" />
             </div>
           </div>
         }
