--- a/web/src/app/features/integrations/integrations.page.html
+++ b/web/src/app/features/integrations/integrations.page.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-full space-y-3">
+<div class="flex flex-col h-full space-y-3">
   <div class="flex flex-row justify-between items-center w-full">
     <h1 class="tr-title-1">Integrations</h1>
     <tr-integration-add-dialog />
@@ -11,9 +11,9 @@
       (pageChange)="pageChanged($event)" />
   </div>
 
-  <div class="flex-grow bg-secondary rounded-md overflow-auto">
-    <div class="p-4 space-y-4 flex-col flex">
-      @if (loading()) {
+  <div class="h-full bg-secondary rounded-md overflow-auto p-4">
+    @if (loading()) {
+      <div class="h-full flex flex-col gap-3">
         @for (_ of [].constructor(5); track $index) {
           <div class="bg-white rounded-md p-4 flex gap-2">
             <tr-skeleton class="w-12 h-12 rounded-full bg-secondary" />
@@ -23,33 +23,38 @@
             </div>
           </div>
         }
-      }
-      @if (integrations | async; as page) {
-        @if (!loading()) {
+      </div>
+    }
+    @if (integrations | async; as page) {
+      @if (!loading() && page.data.length > 0) {
+        <div class="h-full flex flex-col gap-3">
           @for (integration of page.data; track integration.id) {
             <tr-integration-linked-card [integration]="integration" />
-          } @empty {
-            <div
-              class="flex flex-col items-center justify-center h-full min-h-[300px] p-8 space-y-4 text-center">
-              <div class="rounded-full bg-accent p-4 flex items-center justify-center">
-                <ng-icon
-                  name="heroLink"
-                  size="2rem"
-                  strokeWidth="0.15rem"
-                  class="mb-0.5 text-primary"></ng-icon>
-              </div>
-
-              <div class="space-y-2">
-                <h3 class="text-lg font-medium">No integrations found</h3>
-                <p class="text-sm text-muted-foreground max-w-[450px]">
-                  Get started by adding your first integration. Connect your
-                  favorite tools and services to enhance your workflow.
-                </p>
-              </div>
-            </div>
           }
-        }
+        </div>
+      } @else {
+        <div class="h-full flex flex-col justify-center">
+          <div class="flex flex-col items-center p-8 space-y-4 text-center">
+            <div
+              class="rounded-full bg-accent p-4 flex items-center justify-center">
+              <ng-icon
+                name="heroLink"
+                size="2rem"
+                strokeWidth="0.15rem"
+                class="mb-0.5 text-primary"></ng-icon>
+            </div>
+
+            <div class="space-y-2">
+              <h3 class="tr-large">No integrations found</h3>
+              <p class="tr-medium text-muted-foreground max-w-[450px]">
+                Get started by adding your first integration. <br />
+                Connect your favorite tools and services to enhance your
+                workflow.
+              </p>
+            </div>
+          </div>
+        </div>
       }
-    </div>
+    }
   </div>
 </div>
