--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -1,7 +1,7 @@
 @use 'fonts';
 @use 'colors' as color;
 @use 'typography';
-@use "toastr";
+@use 'toastr';
 
 body {
   font-family: Onest, sans-serif;
