--- a/web/src/app/features/automations/listing/automations-list.page.html
+++ b/web/src/app/features/automations/listing/automations-list.page.html
@@ -11,6 +11,8 @@
       (pageChange)="pageChanged($event)" />
   </div>
 
+  <button (click)="displaySchema()" trBtn>Schema</button>
+
   <div class="h-full bg-secondary rounded-md overflow-auto p-4">
     @if (loading()) {
       <div class="h-full flex flex-col gap-3">
