--- a/web/src/app/features/integrations/discord/manage-guild-dialog/manage-guild-dialog.component.html
+++ b/web/src/app/features/integrations/discord/manage-guild-dialog/manage-guild-dialog.component.html
@@ -9,7 +9,12 @@
         Easily add our bot to your server and get started in just a few clicks.
       </p>
     </tr-dialog-header>
-    <div class="flex flex-col bg-secondary p-4 flex-grow rounded-md space-y-2">
+    <div class="flex flex-row items-center space-x-3">
+      <tr-input-search placeholder="Search a guild" class="w-full" />
+      <button trBtn class="w-1/4">Link Guild</button>
+    </div>
+    <div
+      class="flex flex-col bg-secondary p-4 flex-grow rounded-md space-y-2 overflow-y-auto max-h-[400px]">
       @for (guild of guilds; track guild.id) {
         <div class="flex flex-row bg-white p-4 rounded-md items-center">
           <img
@@ -24,11 +29,18 @@
               >{{ guild.approximateMemberCount }} Members</span
             >
           </div>
-          <ng-icon
-            [name]="guild.linked ? 'heroLink' : 'heroLinkSlash'"
-            strokeWidth="0.13rem"
-            [ngClass]="guild.linked ? 'text-primary' : 'text-muted'"
-            size="1.5rem" />
+          <div
+            [ngClass]="{
+              'bg-green-500 hover:bg-green-400': guild.linked,
+              'bg-primary hover:bg-primary/90': !guild.linked,
+            }"
+            class="h-8 w-8 flex flex-col justify-center items-center rounded-md transition-colors hover:cursor-pointer">
+            <ng-icon
+              [name]="guild.linked ? 'heroCheck' : 'heroPlus'"
+              strokeWidth="0.13rem"
+              class="text-white"
+              size="1.1rem" />
+          </div>
         </div>
       }
     </div>
