--- a/web/src/app/features/authentication/login/login.page.html
+++ b/web/src/app/features/authentication/login/login.page.html
@@ -1,14 +1,59 @@
-<div class="flex min-h-screen items-center justify-center bg-secondary">
-  <div class="w-full max-w-md bg-white p-8 rounded-[10px] shadow-md">
-    <h2 class="tr-title-3 text-center mb-6">Welcome back!</h2>
-    <tr-login-form />
-    <div class="mt-4 text-center">
-      <p class="text-sm text-gray-600">
-        Don't have an account?
-        <a routerLink="/register" class="text-primary hover:underline"
-          >Register</a
-        >
-      </p>
+<div class="flex min-h-screen flex-col bg-secondary">
+  <div class="flex flex-1 items-center justify-center">
+    <div
+      class="w-full max-w-md bg-white p-8 rounded-[10px] shadow-md flex flex-col items-center">
+      <img
+        ngSrc="icons/triggo_logo.svg"
+        alt="Triggo Box Logo"
+        width="160"
+        height="120"
+        class="mb-3"
+        priority />
+      <h2 class="tr-title-3 text-center mb-3">Welcome back!</h2>
+      <tr-login-form />
+      <div class="mt-4 text-center">
+        <p class="text-sm text-gray-600">
+          Don't have an account?
+          <a routerLink="/register" class="text-primary hover:underline"
+            >Register</a
+          >
+        </p>
+      </div>
+
+      <div class="relative my-6 w-full">
+        <div class="absolute inset-0 flex items-center">
+          <div class="w-full border-t border-muted"></div>
+        </div>
+        <div class="relative flex justify-center text-xs uppercase">
+          <span class="bg-white px-2 text-muted-foreground"
+            >Or continue with</span
+          >
+        </div>
+      </div>
+
+      <button
+        trBtn
+        variant="outline"
+        class="w-2/3 flex items-center justify-center gap-2">
+        <img
+          ngSrc="icons/google.svg"
+          alt="Google Logo"
+          width="20"
+          height="20"
+          class="w-5 h-5" />
+        <span>Continue with Google</span>
+      </button>
     </div>
   </div>
+
+  <footer class="py-6 w-full">
+    <div class="flex justify-center gap-6 text-sm text-muted-foreground">
+      <a routerLink="/privacy" class="hover:text-primary hover:underline">
+        Privacy & Terms
+      </a>
+      <a routerLink="/contact" class="hover:text-primary hover:underline">
+        Contact Us
+      </a>
+    </div>
+  </footer>
 </div>
