refactor(web): move footer and oauth section in separate components

--- a/web/src/app/features/authentication/login/components/login-form/login-form.component.html
+++ b/web/src/app/features/authentication/login/components/login-form/login-form.component.html
@@ -22,7 +22,7 @@
 
   <button type="submit" trBtn class="w-full" [disabled]="loginLoading()">
     @if (loginLoading()) {
-      <tr-spinner />
+      <tr-spinner size="sm" />
     } @else {
       Log In
     }
