feat(web): add auth footer and oauth solution to register page

--- a/web/src/app/features/authentication/login/login.page.html
+++ b/web/src/app/features/authentication/login/login.page.html
@@ -10,7 +10,7 @@
         class="mb-3"
         priority />
       <h2 class="tr-title-3 text-center mb-3">Welcome back!</h2>
-      <tr-login-form />
+      <tr-login-form class="w-full"/>
       <div class="mt-4 text-center">
         <p class="text-sm text-gray-600">
           Don't have an account?
