--- a/web/src/app/features/authentication/components/oauth-section/oauth-section.component.html
+++ b/web/src/app/features/authentication/components/oauth-section/oauth-section.component.html
@@ -11,7 +11,7 @@
   <button
     trBtn
     variant="outline"
-    class="w-2/3 flex items-center justify-center gap-2">
+    class="w-full flex items-center justify-center gap-2">
     <img
       ngSrc="icons/google.svg"
       alt="Google Logo"
