--- a/web/src/app/features/integrations/discord/integration-linked-discord/integration-linked-discord.component.html
+++ b/web/src/app/features/integrations/discord/integration-linked-discord/integration-linked-discord.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-row items-center">
   <div class="relative">
     <img
-      [ngSrc]="props().avatarUri"
+      [ngSrc]="integration().discordProps.avatarUri"
       alt="Discord Avatar"
       [width]="47"
       [height]="47"
@@ -14,10 +14,11 @@
       [height]="22" />
   </div>
   <div class="flex flex-col ml-4 mr-auto">
-    <h1 class="tr-large">{{ props().displayName }}</h1>
+    <h1 class="tr-large">{{ integration().discordProps.displayName }}</h1>
     <span class="text-gray-500 text-sm"
-      >{{ props().username }} - {{ props().email }}</span
+      >{{ integration().discordProps.username }} -
+      {{ integration().discordProps.email }}</span
     >
   </div>
-  <tr-manage-guild-dialog />
+  <button trBtn variant="outline" (click)="openModal()">Manage guilds</button>
 </div>
