--- a/web/src/app/features/integrations/discord/manage-guild-dialog/manage-guild-dialog.component.html
+++ b/web/src/app/features/integrations/discord/manage-guild-dialog/manage-guild-dialog.component.html
@@ -11,30 +11,39 @@
   </div>
   <div
     class="flex flex-col bg-secondary p-4 flex-grow rounded-md space-y-2 overflow-y-auto max-h-[400px]">
-    @for (guild of guilds$ | async; track guild.id) {
-      <div class="flex flex-row bg-white p-4 rounded-md items-center">
-        <img
-          [ngSrc]="guild.iconUri"
-          alt="Discord Logo"
-          class="rounded-full mr-4"
-          [width]="35"
-          [height]="35" />
-        <div class="flex flex-col mr-auto">
-          <span class="tr-large">{{ guild.name }}</span>
+    @if (guilds$ | async; as guilds) {
+      @for (guild of guilds; track guild.id) {
+        <div class="flex flex-row bg-white p-4 rounded-md items-center">
+          <img
+            [ngSrc]="guild.iconUri"
+            alt="Discord Logo"
+            class="rounded-full mr-4"
+            [width]="35"
+            [height]="35" />
+          <div class="flex flex-col mr-auto">
+            <span class="tr-large">{{ guild.name }}</span>
+          </div>
+          <div
+            [ngClass]="{
+              'bg-green-500 hover:bg-green-400': guild.linked,
+              'bg-primary hover:bg-primary/90': !guild.linked,
+            }"
+            class="h-8 w-8 flex flex-col justify-center items-center rounded-md transition-colors hover:cursor-pointer">
+            <ng-icon
+              [name]="guild.linked ? 'heroCheck' : 'heroPlus'"
+              strokeWidth="0.13rem"
+              class="text-white"
+              size="1.1rem" />
+          </div>
         </div>
-        <div
-          [ngClass]="{
-            'bg-green-500 hover:bg-green-400': guild.linked,
-            'bg-primary hover:bg-primary/90': !guild.linked,
-          }"
-          class="h-8 w-8 flex flex-col justify-center items-center rounded-md transition-colors hover:cursor-pointer">
-          <ng-icon
-            [name]="guild.linked ? 'heroCheck' : 'heroPlus'"
-            strokeWidth="0.13rem"
-            class="text-white"
-            size="1.1rem" />
+      }
+    } @else {
+      @for (_ of [].constructor(5); track $index) {
+        <div class="flex flex-row bg-white p-4 rounded-md items-center">
+          <tr-skeleton class="w-[35px] h-[35px] rounded-full bg-secondary mr-4" />
+          <tr-skeleton class="h-4 w-[200px] bg-secondary" />
         </div>
-      </div>
+      }
     }
   </div>
 </div>
