feat(web): add api call to get google configuration

--- a/web/src/app/features/authentication/components/oauth-section/oauth-section.component.html
+++ b/web/src/app/features/authentication/components/oauth-section/oauth-section.component.html
@@ -8,16 +8,5 @@
     </div>
   </div>
 
-  <button
-    trBtn
-    variant="outline"
-    class="w-full flex items-center justify-center gap-2">
-    <img
-      ngSrc="icons/google.svg"
-      alt="Google Logo"
-      width="20"
-      height="20"
-      class="w-5 h-5" />
-    <span>Continue with Google</span>
-  </button>
+  <tr-google-auth-button class="w-full"/>
 </section>
