--- a/web/src/app/features/oauth2/components/oauth2-base-page/oauth2-base.component.html
+++ b/web/src/app/features/oauth2/components/oauth2-base-page/oauth2-base.component.html
@@ -13,12 +13,6 @@
       </h1>
     </div>
 
-    @if (loading()) {
-      <div class="flex flex-col items-center justify-center space-y-4">
-        <tr-spinner class="w-12 h-12 text-primary" />
-        <p class="text-muted">Connecting to {{ name() }}...</p>
-      </div>
-    }
     @if (!loading && !success()) {
       <div class="bg-red-50 border border-red-200 rounded-lg p-4 text-center">
         <ng-icon
@@ -34,9 +28,6 @@
           contact support.
         </p>
       </div>
-      <button (click)="handleCloseWindow()" trBtn class="w-full mt-4 py-3 px-4">
-        Close Window
-      </button>
     }
     @if (!loading() && success()) {
       <div class="space-y-4">
@@ -53,14 +44,17 @@
           <p class="text-green-600 mb-4 text-sm">
             Your {{ name() }} account has been integrated.
           </p>
-          <p class="text-green-600 text-sm">
-            Closing in {{ countdown() }} seconds...
-          </p>
         </div>
-        <button (click)="handleCloseWindow()" trBtn class="w-full py-3 px-4">
-          Close Window
-        </button>
       </div>
+    }
+
+    @if (loading()) {
+      <div class="flex flex-col items-center justify-center space-y-4">
+        <tr-spinner class="w-12 h-12 text-primary" />
+        <p class="text-muted">Connecting to {{ name() }}...</p>
+      </div>
+    } @else {
+      <ng-content></ng-content>
     }
   </div>
 
