--- a/web/src/app/features/settings/settings.page.html
+++ b/web/src/app/features/settings/settings.page.html
@@ -1,8 +1,7 @@
-<div class="flex flex-col h-full space-y-3">
-  <h1 class="tr-title-1">Settings</h1>
-  <span class="tr-subtitle">Manage your account preferences</span>
+<div class="flex flex-col h-full space-y-5">
+  <h1 class="tr-title-1 mb-10">Settings</h1>
   @if (user()) {
-    <div class="w-2/3 h-full space-y-6">
+    <div class="w-2/3 h-full space-y-6 mx-auto">
       <div class="flex flex-row gap-5 items-center bg-secondary p-8 rounded-md">
         <img
           [ngSrc]="user()?.picture || ''"
@@ -17,7 +16,7 @@
         <button trBtn>Edit Profile</button>
       </div>
       <div
-        class="flex flex-col space-y-4 bg-secondary flex-grow rounded-md p-4">
+        class="flex flex-col space-y-4 bg-secondary flex-grow rounded-md p-8">
         <div class="flex justify-between items-center flex-row">
           <div class="flex flex-col">
             <span class="text-md text-muted"> First Name </span>
@@ -42,7 +41,13 @@
           <button trBtn>Edit</button>
         </div>
       </div>
-      <button trBtn (click)="logout()" variant="destructive">Logout</button>
+      <button trBtn (click)="logout()" variant="destructive" class="flex flex-row items-center gap-1">
+        <ng-icon
+          size="1.1rem"
+          strokeWidth="0.12rem"
+          name="heroArrowLeftStartOnRectangle" />
+        Logout
+      </button>
     </div>
   } @else {
     <tr-skeleton class="w-25 h-25 rounded-full" />
