feat(web): make settings button active when on the settings page

--- a/web/src/app/features/layout/components/side-menu-profile/side-menu-profile.component.html
+++ b/web/src/app/features/layout/components/side-menu-profile/side-menu-profile.component.html
@@ -1,8 +1,9 @@
 <button
   trBtn
-  class="w-[100%] justify-start flex items-center flex-row gap-2 hover:bg-accent px-2.5 h-11"
+  class="w-[100%] justify-start flex items-center flex-row gap-2 hover:bg-accent px-2.5 h-11 [&.active]:bg-accent [&.active]:text-primary"
   variant="secondary"
-  routerLink="/settings">
+  routerLink="/settings"
+  routerLinkActive="active">
   @if (user()) {
     <img
       [ngSrc]="user()?.picture || ''"
