refactor(web): linked discord integration card to take icon and color from schema

--- a/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
+++ b/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
@@ -1,7 +1,10 @@
 <div class="bg-white rounded-md p-4">
   @switch (integration().type) {
     @case (IntegrationTypeEnum.DISCORD) {
-      <tr-integration-linked-discord [integration]="integration()" />
+      <tr-integration-linked-discord
+        [integration]="integration()"
+        [iconUri]="iconUri()"
+        [color]="color()" />
     }
   }
 </div>
