--- a/web/src/app/features/integrations/discord/integration-linked-discord/integration-linked-discord.component.html
+++ b/web/src/app/features/integrations/discord/integration-linked-discord/integration-linked-discord.component.html
@@ -6,12 +6,16 @@
       [width]="47"
       [height]="47"
       class="rounded-full" />
-    <img
-      ngSrc="icons/discord_logo.svg"
-      alt="Discord Logo"
-      class="absolute -bottom-1 left-7 rounded-full"
-      [width]="22"
-      [height]="22" />
+    <div
+      class="h-5 w-5 rounded-full absolute -bottom-1 left-7 flex flex-col items-center justify-center"
+      [ngStyle]="{ 'background-color': color() }">
+      <img
+        [ngSrc]="iconUri()"
+        alt="Discord Logo"
+        class="rounded-full"
+        [width]="12"
+        [height]="12" />
+    </div>
   </div>
   <div class="flex flex-col ml-4 mr-auto">
     <h1 class="tr-large">{{ integration().discordProps.displayName }}</h1>
