feat(web): add integration notion linked card

--- a/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
+++ b/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
@@ -6,5 +6,11 @@
         [iconUri]="iconUri()"
         [color]="color()" />
     }
+    @case (IntegrationTypeEnum.NOTION) {
+      <tr-integration-linked-notion
+        [integration]="integration()"
+        [iconUri]="iconUri()"
+        [color]="color()" />
+    }
   }
 </div>
